--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -16,9 +16,9 @@
 
     <Grid x:Name="ContentGrid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="300"/>
+            <ColumnDefinition Width="0.4*" MinWidth="300"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition MinWidth="300"/>
+            <ColumnDefinition Width="0.45*" MinWidth="300"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0" Margin="20,20,5,20">
@@ -150,10 +150,10 @@
                                 <DataGridTemplateColumn Header="Key" Width="0.3*" SortMemberPath="InstanceKey" IsReadOnly="True">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Border Padding="10,1,8,2" Margin="0,-10" Background="#0FFF" BorderThickness="9,0,0,0" 
+                                            <Border Padding="10,0,8,1" Margin="0,-10" Background="#0FFF" BorderThickness="9,0,0,0" 
                                                     BorderBrush="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left">
                                                 <TextBlock Text="{Binding InstanceKey}" Foreground="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Border}}" 
-                                                         FontWeight="SemiBold" VerticalAlignment="Center">
+                                                         FontWeight="SemiBold" FontSize="16" VerticalAlignment="Center">
                                                     <TextBlock.Effect>
                                                         <DropShadowEffect Color="White" ShadowDepth="0.1" BlurRadius="1" Opacity="1"/>
                                                     </TextBlock.Effect>
@@ -235,7 +235,7 @@
                               IsSynchronizedWithCurrentItem="True"
                               CanUserAddRows="False" CanUserDeleteRows="False"
                               CanUserResizeRows="False" CanUserSortColumns="True"
-                              IsReadOnly="False"
+                              IsReadOnly="True"
                               SelectionUnit="FullRow"
                               AutoGenerateColumns="False"
                               RowHeight="22">
@@ -262,19 +262,19 @@
                               IsSynchronizedWithCurrentItem="True"
                               CanUserAddRows="False" CanUserDeleteRows="False"
                               CanUserResizeRows="False" CanUserSortColumns="True"
-                              IsReadOnly="False"
+                              IsReadOnly="True"
                               SelectionUnit="FullRow"
                               AutoGenerateColumns="False"
                               RowHeight="22">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Order ID" Width="*" Binding="{Binding Path=ID}" />
-                            <DataGridTextColumn Header="Side" Width="*" Binding="{Binding Path=Side}" />
-                            <DataGridTextColumn Header="Type" Width="*" Binding="{Binding Path=Type}" />
-                            <DataGridTextColumn Header="Price" Width="*" Binding="{Binding Path=Price}" />
-                            <DataGridTextColumn Header="Quantity" Width="*" Binding="{Binding Path=Quantity}" />
-                            <DataGridTextColumn Header="Time" Width="*" Binding="{Binding Path=Time}" />
-                            <DataGridTextColumn Header="Status" Width="*" Binding="{Binding Path=Status}" />
+                            <DataGridTextColumn Header="Order ID" Width="0.3*" Binding="{Binding Path=ID}" />
+                            <DataGridTextColumn Header="Side" Width="0.2*" Binding="{Binding Path=Side}" />
+                            <DataGridTextColumn Header="Type" Width="0.2*" Binding="{Binding Path=Type}" />
+                            <DataGridTextColumn Header="Price" Width="0.3*" Binding="{Binding Path=Price}" />
+                            <DataGridTextColumn Header="Quantity" Width="0.3*" Binding="{Binding Path=Quantity}" />
+                            <DataGridTextColumn Header="Time" Width="0.5*" Binding="{Binding Path=Time}" />
+                            <DataGridTextColumn Header="Status" Width="0.4*" Binding="{Binding Path=Status}" />
 
                         </DataGrid.Columns>
                     </DataGrid>
