--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -1,18 +1,19 @@
 ﻿<mah:MetroWindow x:Class="TradeHubGui.Views.GeneticOptimizationWindow"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                xmlns:views="clr-namespace:TradeHubGui.Views"
-                GlowBrush="Silver"
-                ShowInTaskbar="True"
-                WindowStartupLocation="CenterScreen"
-                Title="Genetic Optimization"
-                Width="900"
-                Height="600"
-                MinWidth="500" 
-                MinHeight="500"
-                Background="{StaticResource BaseBackground}"
-                Icon="{StaticResource imgGenetic}">
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                 xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
+                 xmlns:views="clr-namespace:TradeHubGui.Views"
+                 GlowBrush="Silver"
+                 ShowInTaskbar="True"
+                 WindowStartupLocation="CenterScreen"
+                 Title="Genetic Optimization"
+                 Width="900"
+                 Height="600"
+                 MinWidth="500" 
+                 MinHeight="500"
+                 Background="{StaticResource BaseBackground}"
+                 Icon="{StaticResource imgGenetic}">
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <Image Height="20" Width="20" Source="{StaticResource imgGenetic}"/>
@@ -40,7 +41,8 @@
             <Border Grid.RowSpan="2" Grid.Column="2" Style="{StaticResource ContentBorderStyle}" Margin="4"/>
 
             <DockPanel>
-                <Button DockPanel.Dock="Right" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20">
+                <Button DockPanel.Dock="Right" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20"
+                        Command="{Binding RunGeneticOptimizationCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
                         <TextBlock Text="Execute"/>
@@ -50,7 +52,7 @@
                 <StackPanel Margin="10" Orientation="Horizontal">
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
                         <TextBlock Text="Strategy" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}, FallbackValue=AA000001}"
+                        <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}}"
                                 FontSize="24" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush0}" HorizontalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
@@ -74,13 +76,13 @@
                     <DockPanel DockPanel.Dock="Top">
                         <StackPanel DockPanel.Dock="Left">
                             <Label Content="Rounds"/>
-                            <Label Content="Interations"/>
+                            <Label Content="Iterations"/>
                             <Label Content="Population size"/>
                         </StackPanel>
                         <StackPanel Width="100" HorizontalAlignment="Left">
-                            <TextBox/>
-                            <TextBox/>
-                            <TextBox/>
+                            <wpfToolkitExtended:IntegerUpDown Value="{Binding Rounds}" Increment="1" Minimum="1"/>
+                            <wpfToolkitExtended:IntegerUpDown Value="{Binding Iterations}" Increment="1" Minimum="1"/>
+                            <wpfToolkitExtended:IntegerUpDown Value="{Binding PopulationSize}" Increment="1" Minimum="1"/>
                         </StackPanel>
                     </DockPanel>
 
@@ -108,7 +110,8 @@
             <GridSplitter Grid.Column="1" Grid.RowSpan="2" ResizeDirection="Columns"/>
 
 
-            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20" HorizontalAlignment="Right">
+            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20" HorizontalAlignment="Right"
+                    Command="{Binding ExportGeneticOptimizationCommand}">
                 <StackPanel Orientation="Horizontal">
                     <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}"/>
                     <TextBlock Text="Export"/>
@@ -137,7 +140,7 @@
 
 
         <StackPanel Grid.Row="1" Margin="14,8,14,12" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3"/>
+            <Button DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3" Command="{Binding CloseGeneticOptimizationWindowCommand}"/>
         </StackPanel>
     </Grid>
 </mah:MetroWindow>
