--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -11,7 +11,8 @@
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
         <conv:InstanceExecutionStatusToBrushConverter x:Key="StatusToBrush"/>
-        <conv:InstanceExecutionStatusToVisibilityConverter x:Key="StatusToVisibility"/>
+        <conv:InstanceExecutionStatusToVisibilityConverter x:Key="ExecutionStatusToVisibility"/>
+        <conv:OrderStatusToBrushConverter x:Key="OrderStatusToBrush"/>
     </UserControl.Resources>
 
     <Grid x:Name="ContentGrid">
@@ -171,7 +172,7 @@
                                                 <Grid>
                                                     <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
                                                             Command="{Binding DataContext.RunInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
-                                                            Visibility="{Binding Status, Converter={StaticResource StatusToVisibility}}">
+                                                            Visibility="{Binding Status, Converter={StaticResource ExecutionStatusToVisibility}}">
                                                         <StackPanel Orientation="Horizontal">
                                                             <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
                                                             <TextBlock Text="Start"/>
@@ -179,7 +180,7 @@
                                                     </Button>
                                                     <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
                                                             Command="{Binding DataContext.StopInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
-                                                            Visibility="{Binding Status, Converter={StaticResource StatusToVisibility}, ConverterParameter=Invert}">
+                                                            Visibility="{Binding Status, Converter={StaticResource ExecutionStatusToVisibility}, ConverterParameter=Invert}">
                                                         <StackPanel Orientation="Horizontal">
                                                             <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
                                                             <TextBlock Text="Stop"/>
@@ -274,8 +275,15 @@
                             <DataGridTextColumn Header="Price" Width="0.3*" Binding="{Binding Path=Price}" />
                             <DataGridTextColumn Header="Quantity" Width="0.3*" Binding="{Binding Path=Quantity}" />
                             <DataGridTextColumn Header="Time" Width="0.5*" Binding="{Binding Path=Time}" />
-                            <DataGridTextColumn Header="Status" Width="0.4*" Binding="{Binding Path=Status}" />
-
+                            <DataGridTemplateColumn Header="Status" Width="0.4*" SortMemberPath="Status">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Border Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                            <TextBlock Text="{Binding Status}" Foreground="White" FontWeight="SemiBold" Margin="4,2"/>
+                                        </Border>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </DockPanel>
