--- a/Resources/Resources/Styles/WindowStyles.xaml
+++ b/Resources/Resources/Styles/WindowStyles.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary 
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"	
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:components="clr-namespace:Resources.Components"
+    xmlns:local="clr-namespace:MessageBoxUtils"
 	xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="PresentationOptions">
@@ -89,4 +90,38 @@
 		<Setter Property="FontSize" Value="{DynamicResource NormalFontSize}"/>
 	</Style>
 
+
+    <Style TargetType="{x:Type local:WPFMessageBoxControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:WPFMessageBoxControl}">
+                    <Grid FlowDirection="{Binding ContentFlowDirection}" MinWidth="300">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Image Source="{Binding MessageImageSource}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="32" Margin="20,20,15,10" />
+
+                        <TextBlock Text="{Binding Message}" Grid.Column="1" TextWrapping="Wrap" TextAlignment="Left" Foreground="{StaticResource TextBrush}" FontSize="14"
+                                HorizontalAlignment="{Binding ContentTextAlignment}" VerticalAlignment="Top" Margin="0,20,20,20" />
+
+                        <Border Grid.Row="1" Grid.Column="1">
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10">
+                                <Button Content="_Yes" Visibility="{Binding YesNoVisibility}" Command="{Binding YesCommand}" IsDefault="{Binding IsYesDefault}" Margin="3" Height="24" Width="80" />
+                                <Button Content="_No" Visibility="{Binding YesNoVisibility}" Command="{Binding NoCommand}" IsDefault="{Binding IsNoDefault}" Margin="3" Height="24" Width="80" />
+                                <Button Content="O_K" Visibility="{Binding OkVisibility}" Command="{Binding OkCommand}" IsDefault="{Binding IsOkDefault}" Margin="3" Height="24" Width="80" />
+                                <Button Content="_Cancel" Visibility="{Binding CancelVisibility}" Command="{Binding CancelCommand}" IsDefault="{Binding IsCancelDefault}" Margin="3" Height="24" Width="80" />
+                            </StackPanel>
+                        </Border>
+                    </Grid>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
