--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -79,7 +79,7 @@
                             <Label Content="Iterations"/>
                             <Label Content="Population size"/>
                         </StackPanel>
-                        <StackPanel Width="100" HorizontalAlignment="Left">
+                        <StackPanel Width="100" HorizontalAlignment="Left" UseLayoutRounding="True">
                             <wpfToolkitExtended:IntegerUpDown Value="{Binding Rounds}" Increment="1" Minimum="1"/>
                             <wpfToolkitExtended:IntegerUpDown Value="{Binding Iterations}" Increment="1" Minimum="1"/>
                             <wpfToolkitExtended:IntegerUpDown Value="{Binding PopulationSize}" Increment="1" Minimum="1"/>
