--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -163,7 +163,7 @@
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
-                                <DataGridTextColumn Header="Symbol" Width="0.3*" Binding="{Binding Path=Symbol}" IsReadOnly="True"/>
+                                <!--<DataGridTextColumn Header="Symbol" Width="0.3*" Binding="{Binding Path=Symbol}" IsReadOnly="True"/>-->
                                 <DataGridTextColumn Header="Description" Width="0.5*" Binding="{Binding Path=Description}" IsReadOnly="False"/>
                                 <DataGridTemplateColumn Header="Actions" Width="122" IsReadOnly="True">
                                     <DataGridTemplateColumn.CellTemplate>
@@ -254,7 +254,7 @@
 
 
                 <DockPanel Grid.Row="2" Margin="10">
-                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="ORDERS - AA002" Style="{StaticResource HeaderTextBlockStyle}"/>
+                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="{Binding Path=SelectedExecutionDetails.Key}" Style="{StaticResource HeaderTextBlockStyle}"/>
 
                     <DataGrid x:Name="OrdersDataGrid" Margin="10,20,10,10"
                               ItemsSource="{Binding OrderDetailsCollection}"
