--- a/TradeHubGui/Views/BruteOptimizationWindow.xaml
+++ b/TradeHubGui/Views/BruteOptimizationWindow.xaml
@@ -40,7 +40,8 @@
             <Border Grid.RowSpan="2" Grid.Column="2" Style="{StaticResource ContentBorderStyle}" Margin="4"/>
 
             <DockPanel>
-                <Button DockPanel.Dock="Right" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20">
+                <Button DockPanel.Dock="Right" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20"
+                        Command="{Binding RunBruteOptimizationCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
                         <TextBlock Text="Execute"/>
@@ -51,7 +52,7 @@
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
                         <TextBlock Text="Strategy" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}, FallbackValue=AA000001}"
-							   FontSize="24" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush0}" HorizontalAlignment="Center"/>
+                                   FontSize="24" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush0}" HorizontalAlignment="Center"/>
                     </StackPanel>
                 </StackPanel>
             </DockPanel>
@@ -80,7 +81,8 @@
             <GridSplitter Grid.Column="1" Grid.RowSpan="2" ResizeDirection="Columns"/>
 
 
-            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20" HorizontalAlignment="Right">
+            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20" HorizontalAlignment="Right"
+                    Command="{Binding ExportBruteOptimizationCommand}">
                 <StackPanel Orientation="Horizontal">
                     <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}"/>
                     <TextBlock Text="Export"/>
@@ -113,7 +115,7 @@
 
 
         <StackPanel Grid.Row="1" Margin="14,8,14,12" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3"/>
+            <Button DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3" Command="{Binding CloseBruteOptimizationWindowCommand}"/>
         </StackPanel>
     </Grid>
 </mah:MetroWindow>
